Refactored: Choice rendered structure to be similar to the MatrixQuestion.

--- a/src/css/terminal-quiz.css
+++ b/src/css/terminal-quiz.css
@@ -56,17 +56,12 @@ ul {
 
 .choice .position:after {
 
-  content: '\00a0 \00a0-\00a0 \00a0';
+  content: '.';
 }
 
 .choice.selected {
 
     font-weight: bold;
-}
-
-.choice.selected .position:after {
-
-  content: '\00a0 \00a0-->\00a0 \00a0';
 }
 
 li {
